--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -101,8 +101,6 @@ ion-icon {
 }
 
 header {
-    position: absolute;
-    z-index: 99999999999;
     float: right;
     list-style: none;
     margin: 40px 40px;
@@ -343,6 +341,10 @@ textarea {
     color: #fff;
 }
 
+.sec-nav{
+    position: absolute;
+    z-index: 9999999999999;
+}
 .menu-toggle,
 .menu-close {
     display: none;
@@ -435,8 +437,4 @@ textarea {
 
 #menuToggle input:checked~ul {
     transform: none;
-}
-
-#menuToggle.gone{
-    visibility: hidden;
 }
